--- a/Styles.css
+++ b/Styles.css
@@ -1,10 +1,96 @@
- p {
-    font-size: 18px;
-    font-family: 'Times New Roman', Times, serif;
-    } 
-    #first  {color: red;}
-    #second {color: blue;}
-    #third  {color: green;}
+.body{
+margin: auto;
+width: 960px;
+background-color: wheat;
+}
+.topnav {
+    
+    overflow: hidden;
+    background-color:#efeee7;
+    margin-bottom: 20px;
+    box-shadow: 0 2px 2px -2px rgba(0,0,0,.2)
+  }
+
+ul{
+    box-sizing: border-box;
+    width:100%;
+    margin-bottom: 20px;
+    align-items: center;
+
+    padding: 30px;
+}
+.nav-right{
+    float:right;
+    
+}
+
+li, a{
+    float:right;
+    text-align: center;
+    list-style: none;
+    text-decoration: none;
+    color: #bbb;
+    margin-left: 10px;
+}
+
+.nav-right a:hover{
+    color: hsl(174, 72%, 56%);
+}
+.active{
+    float:left;
+
+    padding: 30px;
+    color: #efeee7;
+    background: hsl(174, 72%, 56%);
+    margin:0px;
     
 
+}
+
+.content{
+
+    background: #efeee7;
+    margin-bottom:auto;
+    padding-bottom: 10px;
+}
+
+#My-image {
+    float: left;
+    width:200px;
+    height: 200px;
+    margin: 15px 20px 20px 20px;
     
+}
+
+#Aboutme-text{
+    float: left;
+    margin: 5px;
+}
+
+h2{
+    color: hsl(174, 72%, 56%); 
+    margin-left: 30px;
+}
+#bio{
+color: #bbb;
+margin: 20px;
+}
+
+hr{
+    border:1px solid #bbb;
+    margin-left: 20px;
+    margin-right: 20px;
+}
+#footer{
+    background-color:#333;
+    margin-top: 20px;
+    width: 100%;
+    border-top: 5px solid hsl(174, 72%, 56%);
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    text-align: center;
+    color: #efeee7;
+  
+}
+ 
