--- a/portfolio.css
+++ b/portfolio.css
@@ -2,6 +2,7 @@
     display:flex;
     flex-wrap: wrap;
     padding: 0 4px;
+    float:left;
 }
 
 .column{
@@ -16,13 +17,20 @@
     height: 200px;
     margin: 5px;
 }
+.container-box{
+    position:relative;
+}
 
-h2{
-
+h3{
     color: #efee7e;
 }
 
 .text-block{
-
-     
+    position: absolute;
+    bottom:20px;
+    right:20px;
+    background-color: hsl(174, 72%, 56%);
+    color: white;
+    padding-left: 20px;
+    padding-right: 20px;  
 }
